--- a/src/Pageheader.css
+++ b/src/Pageheader.css
@@ -7,7 +7,7 @@
     align-content: center;
 }
 
-.main-title {
+.title {
     display: flex;
     flex: 1;
     justify-content: center;
@@ -20,9 +20,26 @@
     padding: 20px 0;
 }
 
-.date-all {
+.title-suffix {
+    font-weight: 700;
+    color: #999;
+}
+
+.date-container {
     display: flex;
     flex: 1;
+}
+
+.date {
+    font-size: 32px;
+    letter-spacing: 3px;
+    margin-left: 20px;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 100;
+}
+
+.date-info {
+    color: #888;
 }
 
 .circle-num {
@@ -52,18 +69,6 @@
         color: #1aaaba;
         font-family: 'Quicksand', sans-serif;
     }
-
-.date {
-    font-size: 32px;
-    letter-spacing: 3px;
-    margin-left: 20px;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 100;
-}
-
-.date-info {
-    color: #888;
-}
 
 .nav {
     height: 100%;
@@ -97,7 +102,67 @@
             color: #1aaaba;
         }
 
-.title {
-    font-weight: 700;
-    color: #999;
+
+@media screen and (max-width: 1650px) {
+
+    .date {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 1540px) {
+
+    .date-container {
+        display: none;
+    }
+
+    .header{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 680px) {
+*{
+    padding: 0;
+    margin: 0;
+}
+
+    .main-title{
+        flex: 1;
+    }
+    .header{
+        min-height: 200px;
+        padding-bottom: 0;
+    }
+
+    .nav {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        min-height: 120px;
+    }
+
+        .nav ul {
+height: 100%;
+display: flex;
+flex-direction: column;
+        }
+
+        .nav li {
+            min-width: 680px;
+
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            line-height: 30px;
+        }
+
+
+            .nav li:hover {
+                background-color: rgb(238, 238, 238);
+                color: #1aaaba;
+            }
 }
